--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* Estilos globais */
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   height: 100vh;
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
@@ -25,7 +26,6 @@ h1 {
 .input-container {
   display: flex;
   margin-bottom: 20px;
-  
 }
 
 input[type="text"] {
@@ -94,6 +94,7 @@ input[type="checkbox"] {
   margin-top: 20px;
 }
 
+/* Botões de filtro */
 .filtros button {
   margin: 0 5px;
   padding: 5px 10px;
@@ -107,4 +108,43 @@ input[type="checkbox"] {
 
 .filtros button:hover {
   background-color: #0056b3;
+}
+
+/* Media Query para dispositivos móveis */
+@media (max-width: 600px) {
+  h1 {
+    font-size: 1.6em;
+  }
+
+  .input-container {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  input[type="text"] {
+    width: 100%;
+    border-radius: 4px;
+    margin-bottom: 10px;
+  }
+
+  button {
+    width: 100%;
+    border-radius: 4px;
+    border-left: 1px solid #ccc;
+  }
+
+  .lista-tarefas {
+    max-height: 50vh;
+  }
+
+  .filtros {
+    display: flex;
+    /* flex-direction: column; */
+    align-items: stretch;
+  }
+
+  .filtros button {
+    margin: 5px 0;
+    width: 100%;
+  }
 }
